--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,11 @@ jobs:
       - name: Install dependencies
         run: npm ci
       
+      - name: Create dummy env file
+        run: |
+          echo "VITE_OPENAI_API_KEY=dummy_key_for_build" > .env
+          echo "VITE_GEMINI_API_KEY=dummy_key_for_build" >> .env
+      
       - name: Build
         run: npm run build
       
