--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^4.1.3",
     "@types/uuid": "^10.0.0",
+    "@types/wavesurfer.js": "^6.0.12",
     "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.30.0",
+    "speak-tts": "^2.0.8",
     "uuid": "^11.1.0",
+    "wavesurfer.js": "^7.9.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
